--- a/next-app/components/Card/Card.module.css
+++ b/next-app/components/Card/Card.module.css
@@ -3,7 +3,8 @@
     height: 22.5rem;
     text-align: center;
     color: rgb(97, 8, 97);
-    margin-bottom: 2rem;
+    margin-right:3rem;
+    margin-bottom: 15rem;
     box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.294);
 }
 
