--- a/next-app/components/Card/Card.module.css
+++ b/next-app/components/Card/Card.module.css
@@ -4,7 +4,7 @@
     text-align: center;
     color: rgb(97, 8, 97);
     margin-right:3rem;
-    margin-bottom: 15rem;
+    margin-bottom: .5rem;
     box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.294);
 }
 
